--- a/adf/dataset/Azure_SQL_Config.json
+++ b/adf/dataset/Azure_SQL_Config.json
@@ -1,5 +1,5 @@
 {
-	"name": "AzureSqlTable1",
+	"name": "Azure_SQL_Config",
 	"properties": {
 		"linkedServiceName": {
 			"referenceName": "AzureSqlDatabase1",
@@ -10,7 +10,7 @@
 		"schema": [],
 		"typeProperties": {
 			"schema": "dbo",
-			"table": "test_table"
+			"table": "dataset_config"
 		}
 	},
 	"type": "Microsoft.DataFactory/factories/datasets"
